Correccion de errores. FUNCIONA.